--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "prop-types": "^15.6.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-google-button": "^0.7.0",
+    "react-google-login": "^5.0.7",
     "react-helmet": "^5.2.0",
     "react-pose": "^4.0.5",
     "styled-components": "^4.1.3"
