--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@reach/dialog": "^0.2.0",
     "@reach/router": "^1.2.1",
     "@reach/visually-hidden": "^0.1.1",
+    "auth0-js": "^9.12.1",
     "babel-plugin-styled-components": "^1.10.0",
     "gatsby": "^2.3.26",
     "gatsby-image": "^2.0.39",
@@ -39,12 +40,14 @@
     "intersection-observer": "^0.5.1",
     "prop-types": "^15.6.2",
     "react": "^16.8.6",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.8.6",
     "react-google-button": "^0.7.0",
     "react-google-login": "^5.0.7",
     "react-helmet": "^5.2.0",
     "react-pose": "^4.0.5",
-    "styled-components": "^4.1.3"
+    "styled-components": "^4.1.3",
+    "webpack": "^4.41.4"
   },
   "devDependencies": {
     "ava": "^0.25.0",
