--- a/package.json
+++ b/package.json
@@ -38,14 +38,17 @@
     "gatsby-transformer-remark": "^2.3.9",
     "gatsby-transformer-sharp": "^2.1.18",
     "intersection-observer": "^0.5.1",
+    "mongoose": "^5.8.2",
     "prop-types": "^15.6.2",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.16",
+    "react-cookies": "^0.1.1",
     "react-dom": "^16.8.6",
     "react-google-button": "^0.7.0",
     "react-google-login": "^5.0.7",
     "react-helmet": "^5.2.0",
     "react-pose": "^4.0.5",
+    "react-router": "^5.1.2",
     "styled-components": "^4.1.3",
     "webpack": "^4.41.4"
   },
